--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jose": "^6.0.6",
     "lucide-react": "^0.475.0",
     "nanoid": "^5.1.2",
-    "next": "^15.2.0-canary.74",
+    "next": "15.3.1-canary.14",
     "pg": "^8.13.3",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
@@ -47,5 +47,6 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
